<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Nuevo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtNombreNue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/hint_edtNombreNue"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/edtApellidoNue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/hint_edtApellidoNue"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/edtCorreoNue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/hint_edtCorreoNue"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/edtClaveNue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/hint_edtClaveNue"
            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/edtConfirmarCla"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/hint_edtConfirmarCla"
            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rdbUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/rdb_Usuario" />

            <RadioButton
                android:id="@+id/rdbAsistente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/rdb_Asistente"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/rdbAdministrador"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_margin="10dp"
                android:text="@string/rdb_Administrador" />

        </RadioGroup>

        <Button
            android:id="@+id/btnGuardarNue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="guardar"
            android:text="@string/btnGuardarNue" />

        <Button
            android:id="@+id/BtnCancelarNue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="cancelar"
            android:text="@string/btnCancelar" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>