<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:ems="10"
            android:hint="@string/hint_edtCorreo"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/edtClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp "
            android:ems="10"
            android:hint="@string/hint_edtCLAVE"
            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="30dp"
            android:onClick="ingresar"
            android:text="@string/btnIngresar" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>